# Grader

./: .gitignore  README.md  app.py  pyproject.toml
app/: __init__.py  agents.py  gradio_ui.py  main.py  models.py  parsers.py  source_tools.py  workflow_runner.py
data/: rubrics.json
grader/: __init__.py  file_parser.py  models.py  pipeline.py  rubric_store.py
grader/rubrics/: rubric.json
test_data/: Instructions.txt  source text example.txt  student submission example.txt  submission.docx
tests/: Untitled  test_api.py  test_parsers.py  test_pipeline.py  test_source_tools.py  test_workflow_runner.py  test_workflow_runner_multi.py
tests/fixtures/: README.md  instructions.txt  sources.txt
