[project]
name = "grader"
version = "0.1.0"
description = "Agentic AI grading service using LangChain"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "langchain>=0.3.0",
  "langchain-openai>=0.2.0",
  "langgraph>=0.2.0",
  "pydantic>=2.8.0",
  "python-docx>=1.1.2",
  "pypdf>=4.3.0",
  "python-pptx>=1.0.2",
  "moviepy>=1.0.3",
  "openai>=1.40.0",
  "python-multipart>=0.0.9",
  "gradio>=4.44.0"
]

[tool.uv]
dev-dependencies = ["pytest>=8.0.0"]
